...
                                            <segue destination="WSK-Jc-FFV" kind="show" id="kBV-eW-geP"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oKO-sx-mZa">
                                        <rect key="frame" x="0.0" y="70" width="295" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <segue destination="PLW-kc-1nt" kind="show" id="GOR-W8-6kT"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kaH-W3-03p">
                                        <rect key="frame" x="0.0" y="140" width="295" height="50"/>
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LOGIN" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9qb-dd-rCW">
                                        <rect key="frame" x="0.0" y="0.0" width="295" height="50"/>
                                        <fontDescription key="fontDescription" name="Kefa-Regular" family="Kefa" pointSize="25"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hfe-OK-G0d">
                                        <rect key="frame" x="0.0" y="70" width="295" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2dq-kl-ueV">
                                        <rect key="frame" x="0.0" y="140" width="295" height="50"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Error" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dUv-ym-NKw">
                                        <rect key="frame" x="0.0" y="210" width="295" height="20"/>
...
                            <constraint firstItem="hCn-6u-xSc" firstAttribute="bottom" secondItem="lYT-UG-8ar" secondAttribute="bottom" constant="100" id="pKd-C2-qMj"/>
                            <constraint firstItem="nRk-k6-nAs" firstAttribute="leading" secondItem="mkp-AN-ZR0" secondAttribute="leadingMargin" id="q3T-va-dJn"/>
                            <constraint firstItem="lYT-UG-8ar" firstAttribute="leading" secondItem="hCn-6u-xSc" secondAttribute="leading" constant="16" id="une-Fa-tvw"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="hCn-6u-xSc"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Profile" image="user-2" id="LDF-F1-XKV"/>
                    <connections>
                        <outlet property="AddEventButtonView" destination="A5D-zl-DVK" id="8cu-wB-SEl"/>
                        <outlet property="MyEventsButtonView" destination="vRc-xy-dOq" id="YvE-Uh-04Z"/>
                        <outlet property="ProdileDashboardButtonView" destination="lYT-UG-8ar" id="iZJ-mv-Byi"/>
                        <outlet property="ProfileDView" destination="nRk-k6-nAs" id="bbN-Uo-wMa"/>
                        <outlet property="profileImageView" destination="lhR-x3-enS" id="ipM-k3-07O"/>
...
            <point key="canvasLocation" x="172" y="690"/>
        </scene>
        <!--Event-->
        <scene sceneID="cff-Sp-ZtX">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="tIe-sb-iiS" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Event" image="event-2" id="Lnw-6U-ISh"/>
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="mDO-jW-nbS">
                        <rect key="frame" x="0.0" y="44" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
...
